# CanvasLib

./: .clang-tidy  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakeLists.txt.autosave  CMakePresets.json  HACKING.md  README.md  compile_commands.json  flake.nix  launch.json  run.sh
.cache/clangd/index/: CanvasLib.cpp.6894C715D4D75E6F.idx  CanvasLib.hpp.228B61F0ACD9B30B.idx  CanvasLib_export.hpp.493A21C8D3663AC7.idx  CanvasLib_test.cpp.CD9D143248ADBB24.idx  Color.cpp.B8B6D3D4E009AB7F.idx  Color.hpp.7A89ED8D848A06E4.idx  Colors.cpp.0970F385C1401243.idx  Colors.hpp.B8F78CEF505B4EC0.idx  Vec2.hpp.841AFC9515BB5E27.idx
GLFW/: glfw3.lib
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
docs/: Doxyfile  Doxyfile.in
docs/docs/html/: CanvasLib_8hpp.html  CanvasLib_8hpp_source.html  CanvasLib__export_8hpp.html  CanvasLib__export_8hpp_source.html  Color_8hpp.html  Color_8hpp_source.html  Colors_8hpp.html  Colors_8hpp_source.html  README_8md.html  Vec2_8hpp.html  Vec2_8hpp_source.html  about.html  about_8dox.html  annotated.html  classcanv_1_1Canvas-members.html  classcanv_1_1Canvas.html  classcanv_1_1Color-members.html  classcanv_1_1Color.html  classcanv_1_1Colors-members.html  classcanv_1_1Colors.html  classcanv_1_1Vec2-members.html  classcanv_1_1Vec2.html  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_9c339fe5cdfa454ced59b9c6e587782e.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_vars.html  index.html  menudata.js  namespacecanv.html  namespaces.html  pages.html
docs/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_8.js  all_a.js  all_b.js  all_c.js  classes_1.js  defines_0.js  files_1.js  files_3.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  pages_1.js  searchdata.js  variables_0.js  variables_3.js  variables_4.js  variables_5.js  variables_8.js
docs/html/: CanvasLib_8hpp_source.html  Color_8hpp_source.html  Colors_8hpp_source.html  Vec2_8hpp_source.html  annotated.html  annotated_dup.js  classcanv_1_1Canvas-members.html  classcanv_1_1Canvas.html  classcanv_1_1Canvas.js  classcanv_1_1Color-members.html  classcanv_1_1Color.html  classcanv_1_1Color.js  classcanv_1_1Colors-members.html  classcanv_1_1Colors.html  classcanv_1_1Vec2-members.html  classcanv_1_1Vec2.html  classcanv_1_1Vec2.js  classes.html  dir_9c339fe5cdfa454ced59b9c6e587782e.html  dir_9c339fe5cdfa454ced59b9c6e587782e.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_func.html  index.html  namespacecanv.html  namespacecanv.js  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js
docs/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  classes_0.js  classes_1.js  functions_0.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
include/CanvasLib/: CanvasLib.hpp  CanvasLib_export.hpp  Color.hpp  Colors.hpp  Vec2.hpp  Window.hpp
source/: CanvasLib.cpp  Color.cpp  Colors.cpp  Window.cpp
test/: CMakeLists.txt
test/source/: CanvasLib_test.cpp
